objects/SBQQ__TemplateSection__c.object
<CustomObject>
    <fields>
        <fullName>SBQQ__BorderColor__c</fullName>
        <description>Color of table borders expressed as a hexadecimal value.</description>
        <inlineHelpText>Color of table borders expressed as a hexadecimal value.</inlineHelpText>
        <label>Border Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BottomMargin__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Margin left at the bottom of this section.</description>
        <inlineHelpText>Margin left at the bottom of this section.</inlineHelpText>
        <label>Bottom Margin</label>
        <precision>14</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__ColumnHeaderHidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether column header is displayed or not. Only applies to sections pointing to template content of type "Line Items".</description>
        <inlineHelpText>Select the checkbox to hide the column header. Only applies to sections pointing to template content of type "Line Items".</inlineHelpText>
        <label>Hide Column Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConditionalPrintField__c</fullName>
        <description>Field on quote object that controls whether this section prints on generated PDF documents.</description>
        <inlineHelpText>Field on quote object that controls whether this section prints on generated PDF documents.</inlineHelpText>
        <label>Conditional Print Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group Line Items</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Content__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Source of content for this section.</description>
        <inlineHelpText>Select the template content to display in this template section.</inlineHelpText>
        <label>Content</label>
        <referenceTo>SBQQ__TemplateContent__c</referenceTo>
        <relationshipLabel>Template Sections</relationshipLabel>
        <relationshipName>TemplateSections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__DisplayOrder__c</fullName>
        <description>Order in which this section is rendered relative to other sections on the template.</description>
        <inlineHelpText>Specify the order (top down) in which this section is rendered relative to other sections on the template.</inlineHelpText>
        <label>Display Order</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__FilterField__c</fullName>
        <description>Field used to filter records rendered by this section.</description>
        <inlineHelpText>Field used to filter records rendered by this section.</inlineHelpText>
        <label>Filter Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Optional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__FilterOperator__c</fullName>
        <description>Operator used for filtering records rendered by this section.</description>
        <inlineHelpText>Operator used for filtering records rendered by this section.</inlineHelpText>
        <label>Filter Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less or equals</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equals</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__FilterValue__c</fullName>
        <description>Value used in filtering records rendered by this section.</description>
        <inlineHelpText>Value used in filtering records rendered by this section.</inlineHelpText>
        <label>Filter Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GroupField__c</fullName>
        <description>Field used in grouping lines rendered by this section. Only applicable to Line Items section.</description>
        <inlineHelpText>Specify field used in grouping lines rendered by this section. Only applicable to Line Items section.</inlineHelpText>
        <label>Group Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Family</fullName>
                </value>
                <value>
                    <fullName>Subscription Category</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__KeepTogether__c</fullName>
        <description>Imposes "keep-together.within-page" condition on this block of content.</description>
        <inlineHelpText>Specifies whether an attempt should be made to keep contents together on the same page.</inlineHelpText>
        <label>Keep Together</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                    <default>true</default>
                    <label>Auto</label>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__KeepWithNext__c</fullName>
        <description>Imposes "keep-with-next.within-page" condition on this block of content.</description>
        <inlineHelpText>Specifies whether an attempt should be made to keep contents together on the same page with next block of content.</inlineHelpText>
        <label>Keep With Next</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                    <default>true</default>
                    <label>Auto</label>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__KeepWithPrevious__c</fullName>
        <description>Imposes "keep-with-previous.within-page" condition on this block of content.</description>
        <inlineHelpText>Specifies whether an attempt should be made to keep contents together on the same page with previous block of content.</inlineHelpText>
        <label>Keep With Previous</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__PageBreak__c</fullName>
        <description>Specifies page breaking behavior for this content.</description>
        <inlineHelpText>Specifies whether page break should be inserted before, after or both before/after this content.</inlineHelpText>
        <label>Page Break</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Before</fullName>
                </value>
                <value>
                    <fullName>After</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteTotalsPrinted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Forces quote totals to print after line items rendered by this section.</description>
        <inlineHelpText>Select the checkbox to print quote totals after this section. Only applicable to Line Items sections.</inlineHelpText>
        <label>Print Quote Totals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RollUpField__c</fullName>
        <description>Field on quote line object that's used to rollup lines.</description>
        <inlineHelpText>Quote line field used for roll-up. All lines where this field returns the same value will be rolled up into the first line where the value occurs.</inlineHelpText>
        <label>Roll-Up Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SummaryDisplay__c</fullName>
        <description>Specifies how line items rendered by this section are summarized.</description>
        <inlineHelpText>Choose "Always" to display subtotal, discounts and grand total regardless of any other settings. Choose "Never" to never display regardless of other settings. Leaving this field blank will render summary as defined by template fields.</inlineHelpText>
        <label>Summary Display</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Template__c</fullName>
        <description>Quote template that uses this template section.</description>
        <inlineHelpText>Quote template that uses this template section.</inlineHelpText>
        <label>Template</label>
        <referenceTo>SBQQ__QuoteTemplate__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__TopMargin__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Margin left at the top of this section.</description>
        <inlineHelpText>Margin left at the top of this section.</inlineHelpText>
        <label>Top Margin</label>
        <precision>14</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <customHelpPage>SBQQ__TemplateSectionHelp</customHelpPage>
    <description>Section of content displayed on specific template.</description>
    <label>Template Section</label>
    <nameField>
        <label>Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>